<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenStud</string>
    <string name="studentId">Student ID</string>
    <string name="password" translatable="false">Password</string>
    <string name="fullname" translatable="false">%1$s %2$s</string>
    <string name="login">Login</string>
    <string name="saveLogin">Remember me</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="course">Course</string>
    <string name="department">Department</string>
    <string name="status">Student status</string>
    <string name="year_course">Course year</string>
    <string name="birthDate">Birth date</string>
    <string name="birthPlace">Birth place</string>
    <string name="year_corse_profile">%1$s year</string>
    <string name="ects">ECTS</string>
    <string name="isee" translatable="false">ISEE</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="exams">Exams</string>
    <string name="payments">Taxes</string>
    <string name="exit">Logout</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="blank_username_error">"You can't leave the username field blank!</string>
    <string name="blank_password_error">"You can't leave the password field blank!</string>
    <string name="blank_username_password_error">"You can't leave the username and password fields blank!</string>
    <string name="expired_password_error">The password is expired and needs to be changed!</string>
    <string name="connection_error">Connection error!</string>
    <string name="retry">Retry</string>
    <string name="invalid_response_error">InfoStud doesn\'t seems to work properly</string>
    <string name="user_not_enabled_error">User not enabled to manage InfoStud!</string>
    <string name="invalid_password_error">Invalid credentials!</string>
    <string name="device_no_internet">Your device is not connected to internet</string>
    <string name="isee_not_available">Not available</string>
    <string name="payment_number">Payment n. %1$s</string>
    <string name="payment_number_ext">Payment number: %1$s</string>
    <string name="course_code_pay">Course code: %1$s</string>
    <string name="accademic_year_pay">Academic year: %1$s</string>
    <string name="payment_date">Payment date: %1$s</string>
    <string name="payment_description">Description: %1$s</string>
    <string name="payment_amount" translatable="false">%1$s €</string>
    <string name="cfu_exams" translatable="false">CFU: %1$s</string>
    <string name="ssd_exams" translatable="false">SSD: %1$s</string>
    <string name="number_reservation">Reservation number: %1$s</string>
    <string name="teacher_reservation">Teacher: %1$s</string>
    <string name="teacher_event">Teacher: %1$s</string>
    <string name="description_reservation">Additional infos: %1$s</string>
    <string name="date_exam">Date exam: %1$s</string>
    <string name="exams_completed">Completed</string>
    <string name="reservations">Reservations</string>
    <string name="search">Search</string>
    <string name="reload">Reload</string>
    <string name="no_reservations_found">No reservation was found</string>
    <string name="no_exams_done_found">No exam was found</string>
    <string name="no_exams_doable_found">No exam was found</string>
    <string name="no_paid_tax_found">No paid tax was found</string>
    <string name="no_unpaid_tax_found">No unpaid tax was found</string>
    <string name="ok_delete">Reservation successfully deleted</string>
    <string name="failed_delete">Can\'t delete reservation! Try again later.</string>
    <string name="failed_get_io">PDF file can\'t be saved.</string>
    <string name="failed_get_network_exam">Connection error. File cannot be downloaded!</string>
    <string name="failed_get_network_payment">Connection error. File cannot be downloaded!</string>
    <string name="delete_res_dialog_title">Delete reservation?</string>
    <string name="delete_res_dialog_description">Reservation for %1$s will be deleted. Are you sure?</string>
    <string name="show_exam_sessions">Show exam sessions</string>
    <string name="delete_ok">Delete</string>
    <string name="delete_abort">Abort</string>
    <string name="receipt">Receipt</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="search_sessions">Sessions</string>
    <string name="start_date_reservation">Start reservations: %1$s</string>
    <string name="end_date_reservation">End reservations: %1$s</string>
    <string name="channel_reservation">Channel: %1$s</string>
    <string name="info_extra_reservation_format">Infos: %1$s</string>
    <string name="place_reservation">Place reservation</string>
    <string name="reservation_error">Can\'t place the reservation. Try again later</string>
    <string name="reservation_ok">Reservation placed successfully</string>
    <string name="already_placed_reservation">You already placed a reservation for this session!</string>
    <string name="fork_github">Source code</string>
    <string name="author">Author</string>
    <string name="version">Version</string>
    <string name="email_address">leonardosarra@outlook.com</string>
    <string name="send_email">Send an email</string>
    <string name="question_concerning_openstud">Any question?</string>
    <string name="open_source_libs">Open source libraries</string>
    <string name="no_sessions_found">No sessions found</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="pref_ringtone_silent" tools:ignore="MissingTranslation">Silent</string>
    <string name="pref_title_themes">Appearance</string>
    <string name="pref_header_other">Other</string>
    <string name="delete_pdf">Delete cached PDF files</string>
    <string name="pref_title_stats">Stats</string>
    <string name="summary_theme">Choose OpenStud theme</string>
    <string name="key_theme" translatable="false">key_app_theme</string>
    <string name="title_theme">Theme</string>
    <string name="default_laude">Value \"30L\"</string>
    <string name="default_laute_value" translatable="false">Value \"30L\"</string>
    <string name="key_default_laude" translatable="false">key_default_laude</string>
    <string name="default_laude_ext">Set value for \"30L\" to be used in stats</string>
    <string name="sort_by">Sort by</string>
    <string name="key_delete" translatable="false">key_delete</string>
    <string name="success_delete_pdf">Files deleted successfully!</string>
    <string name="failed_delete_pdf">Can\'t delete cached files. Try again later</string>
    <string name="restart_required">Restart required</string>
    <string name="restart_required_description">In order to apply the last changes OpenStud must be restarted. Restart now?</string>
    <string name="restart_ok">Restart</string>
    <string name="restart_cancel">Later</string>
    <string name="my_gpa">My GPA</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="weighted">Weighted</string>
    <string name="average_over_time">Average over time</string>
    <string name="marks_graph">Grade distribution</string>
    <string name="pref_header_stats">Stats</string>
    <string name="pref_header_themes">Themes</string>
    <string name="grades">Grades</string>
    <string name="weighted_average">Weighted average</string>
    <string name="description_reservation_options">Reservation options</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="closed_reservation">You can\'t delete the reservation after the deadline!</string>
    <string name="info_extra_reservation">Info</string>
    <string name="logo_designer">Logo and icon</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="website" translatable="false">Website</string>
    <string name="not_enrolled">Not enrolled</string>
    <string name="openstud_logo_content" translatable="false">OpenStud logo</string>
    <string name="no_value_laude">Laude value can be changed from the settings</string>
    <string name="edit">Edit</string>
    <string name="add_exam">Add exam</string>
    <string name="add_exam_hint">Exam name</string>
    <string name="grade">Grade</string>
    <string name="grade_stats">Grade: %1$s</string>
    <string name="add">Add</string>
    <string name="add_exams">Add exam</string>
    <string name="contributors">Contributors</string>
    <string name="developer">Developer</string>
    <string name="secret_question">Secret question</string>
    <string name="answer">Answer</string>
    <string name="confirm">Confirm</string>
    <string name="recovery_password">Recovery password</string>
    <string name="email" translatable="false">Email</string>
    <string name="recovery_email">Recovery email</string>
    <string name="invalid_answer">The answer is not correct!</string>
    <string name="invalid_student_id">Student ID does not exist</string>
    <string name="recover_password_details">Answer the security question to receive a new password on your recovery email address</string>
    <string name="calendar">Calendar</string>
    <string name="lessons">Lessons</string>
    <string name="close">Close</string>
    <string name="filter_calendar_description">Choose the lessons that you want to be shown in the calendar</string>
    <string name="enable_lessons">Add lessons automatically</string>
    <string name="key_enable_lesson" translatable="false">key_enable_lesson</string>
    <string name="enable_lessons_description">Show lessons for non-passed exams in the calendar using the Sapienza\'s database</string>
    <string name="pref_title_general">General</string>
    <string name="key_exam_date" translatable="false">key_exam_date</string>
    <string name="show_exam_date">Show passed exam date</string>
    <string name="show_exam_date_description">Show the day an exam was passed by the student</string>
    <string name="show_options_lesson">Enable export of lessons to the calendar</string>
    <string name="show_options_lesson_description">Show an icon to let you add a lesson to your system calendar from the \'\'Classroom timetable\'\' and \'\'Calendar\'\' screens</string>
    <string name="key_options_lesson" translatable="false">key_options_lesson</string>
    <string name="pref_title_lessons">Lessons</string>
    <string name="baseFinalGrade">Base</string>
    <string name="average">Average</string>
    <string name="widget_login_error">You have to save the credentials in order to enable the widget!</string>
    <string name="add_widget">Add widget</string>
    <string name="key_biometrics" translatable="false">key_biometrics</string>
    <string name="pref_title_security">Security</string>
    <string name="enable_biometric_login">Enable biometric login</string>
    <string name="enable_biometric_login_description">Force the user to login using a biometric input (e.g: fingerprint, iris).</string>
    <string name="key_security_category" translatable="false">key_security_category</string>
    <string name="add_custom_lesson">Add custom lessons</string>
    <string name="key_add_custom_lesson" translatable="false">key_add_custom_lesson</string>
    <string name="add_custom_lesson_summary">Setup custom lessons and show them in the calendar</string>
    <string name="configure_event_widget">Configure upcoming exams widget</string>
    <string name="include_available_exams_widget">Include available exams</string>
    <string name="upcoming_exams_widget">Upcoming exams</string>
    <string name="show_countdown">Show remaining days to the exam</string>
    <string name="widget_no_exams">There are no exams in the near future.\nHave fun!</string>
</resources>