<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/configure_event_widget"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/show_countdown_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown" />

            <Switch
                android:id="@+id/include_exam_available_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/include_available_exams_widget" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/add_widget" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>