<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:gravity="center_horizontal"
    android:focusableInTouchMode="true"
    android:background="?attr/backgroundColor">

    <!-- NOTE: This list should be displayed in a list
    instead of nested layouts -->

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/recovery_password"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/recover_password_details"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="?attr/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/answer"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        android:theme="@style/StatsThemeEditText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/questionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/primaryTextColor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/abort"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            android:text="@string/delete_abort"
            android:textColor="?attr/colorButtonNav"
            android:textSize="14sp"
            android:theme="@style/ButtonReservations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirm"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/confirm"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            android:text="@string/confirm"
            android:textColor="?attr/colorButtonNav"
            android:textSize="14sp"
            android:theme="@style/ButtonReservations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>