<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <!-- NOTE: This list should be displayed in a list
        instead of nested layouts -->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/lessons"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/filter_calendar_description"
            android:textColor="?attr/secondaryTextColor"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/close"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.5"
                android:text="@string/close"
                android:textColor="?attr/colorButtonNav"
                android:textSize="14sp"
                android:theme="@style/ButtonReservations"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.944"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>